# options-data-pipeline

./: .gitignore  README.md  pyproject.toml
data/sample/2026-07-02/: QQQ.csv  SPY.csv
notebooks/: demo.ipynb
notes/: code-walkthrough.md  how-it-works.md
src/optpipe/: __init__.py  __main__.py  features.py  snapshot.py  store.py
tests/: conftest.py  test_features.py  test_snapshot_and_store.py
